# EnderdragonKiller

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml
core/: pyproject.toml
core/examples/: retrieve_materials.py
core/knowledge_base/: README.md  knowledge_base.py
enderdragonkiller/gamebot/: __init__.py  gamebot.py  position.py
examples/gamebot/: main.py
gamebot/: Dockerfile  README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json
gamebot/lib/: action_invocation.ts  actions.js  arg.ts  bot.js  bot.ts  mineflayer_bot_status.ts  mineflayer_serialization.ts  parameter.ts  programs.js  serialization.js  serializer.js  utils.ts  vec3.js
gamebot/lib/actions/: action.ts  action_instance.ts  go_to_action.ts  go_to_action_instance.ts  predefined_action.ts  program_action.ts  program_action_instance.ts
gamebot/lib/actions_legacy/: action_status.ts  go_to_action.ts  program_action.ts
gamebot/lib/programs/: action_invocation.ts  action_program.ts  loop_program.ts  program.ts  program_creation.ts  (+1 more)
gamebot_js/: index.js  package.json
gamebot_js/lib/: programs.js
gateway/: README.md  asyncapi.yaml  index.js  index.ts  package-lock.json  package.json
gateway/lib/: bot.js  bot.ts
gateway/routes/: bots.ts  gamebot.js
gateway_js/: index.js  package-lock.json
knowledge_base/: .gitignore  README.zh.md  pyproject.toml
knowledge_base/knowledge_base/: knowledge_base.py
knowledgebase/: KnowledgeBase.py  readme.md  test.py
(+8 files in other folders)
