[tool.poetry]
name = "knowledge-base"
version = "0.0.0"
description = ""
authors = ["Zijian Zhang <futrime@outlook.com>"]
readme = "README.md"
packages = [{include = "knowledge_base"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
